--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         </div>
         <nav class="nav col-xl-6 col-lg-6 col-md-8">
             <ul class="menu">
-                <li><a class="link" href="news.php">Новости</a></li>
+                <li><a class="link" href="news.html">Новости</a></li>
                 <li><a class="link" href="/">Объявления</a></li>
                 <li><a class="link" href="/">Афиша</a></li>
                 <li><a class="link" href="/">Люди</a></li>
-                <li><a class="link" href="/">ВТВ</a></li>
+                <li><a class="link" href="vtvMain.html">ВТВ</a></li>
                 <li><a class="link" href="/">Вакансии</a></li>
                 <li><a class="link" href="/">Гороскоп</a></li>
                 <li><a class="link" href="/">Еще</a></li>
@@ -820,30 +820,34 @@
                 <a class="close" href="/"></a>
 
                 <div class="yanText">
-                    <p class="textYan">Горячие столы!</p>
-                    <p class="textYan">Столы оптом и в розницу.</p>
-                    <p class="textYan">Бесплатная доставка.</p>
+                    <p class="textYan">Горячие столы!<br>
+                        Столы оптом и в розницу.<br>
+                        Бесплатная доставка.
+                    </p>
+                    <p class="rec">реклама</p>
+                    <a href="/" class="transLink"></a>
+                </div>
+
+                <div class="yanText">
+                    <p class="textYan">Горячие столы!
+                        Столы оптом и в розницу.<br>
+                        Бесплатная доставка.<br>
+                    </p>
                     <p class="rec">реклама</p>
                     <a href="/" class="transLink"></a>
                 </div>
                 <div class="yanText">
-                    <p class="textYan">Горячие столы!</p>
-                    <p class="textYan">Столы оптом и в розницу.</p>
-                    <p>Бесплатная доставка.</p>
+                    <p class="textYan">Горячие столы!<br>
+                        Столы оптом и в розницу.<br>
+                        Бесплатная доставка.
+                    </p>
                     <p class="rec">реклама</p>
                     <a href="/" class="transLink"></a>
                 </div>
                 <div class="yanText">
-                    <p class="textYan">Горячие столы!</p>
-                    <p class="textYan">Столы оптом и в розницу.</p>
-                    <p class="textYan">Бесплатная доставка.</p>
-                    <p class="rec">реклама</p>
-                    <a href="/" class="transLink"></a>
-                </div>
-                <div class="yanText">
-                    <p class="textYan">Горячие столы!</p>
-                    <p class="textYan">Столы оптом и в розницу.</p>
-                    <p class="textYan">Бесплатная доставка.</p>
+                    <p class="textYan">Горячие столы!<br>
+                        Столы оптом и в розницу.<br>
+                        Бесплатная доставка.</p>
                     <p class="rec">реклама</p>
                     <a href="/" class="transLink"></a>
                 </div>
