--- a/news.html
+++ b/news.html
@@ -810,28 +810,39 @@
                 <a class="close" href="/"></a>
 
                 <div class="yanText">
-                    <p>Горячие столы!</p>
-                    <p>Столы оптом и в розницу.</p>
-                    <p>Бесплатная доставка.</p>
+                    <p class="textYan">Горячие столы!<br>
+                        Столы оптом и в розницу.<br>
+                        Бесплатная доставка.
+                    </p>
                     <p class="rec">реклама</p>
+                    <a href="/" class="transLink"></a>
                 </div>
+
                 <div class="yanText">
-                    <p>Горячие столы!</p>
-                    <p>Столы оптом и в розницу.</p>
-                    <p>Бесплатная доставка.</p>
+                    <p class="textYan">Горячие столы!<br>
+                        Столы оптом и в розницу.<br>
+                        Бесплатная доставка.
+                    </p>
                     <p class="rec">реклама</p>
+                    <a href="/" class="transLink"></a>
                 </div>
+
                 <div class="yanText">
-                    <p>Горячие столы!</p>
-                    <p>Столы оптом и в розницу.</p>
-                    <p>Бесплатная доставка.</p>
+                    <p class="textYan">Горячие столы!<br>
+                        Столы оптом и в розницу.<br>
+                        Бесплатная доставка.
+                    </p>
                     <p class="rec">реклама</p>
+                    <a href="/" class="transLink"></a>
                 </div>
+
                 <div class="yanText">
-                    <p>Горячие столы!</p>
-                    <p>Столы оптом и в розницу.</p>
-                    <p>Бесплатная доставка.</p>
+                    <p class="textYan">Горячие столы!<br>
+                        Столы оптом и в розницу.<br>
+                        Бесплатная доставка.
+                    </p>
                     <p class="rec">реклама</p>
+                    <a href="/" class="transLink"></a>
                 </div>
             </div>
         </div>
