--- a/vtvMain.html
+++ b/vtvMain.html
@@ -490,34 +490,48 @@
                     <a class="close" href="/"></a>
 
                     <div class="yanText yanVtv">
-                        <p>Горячие столы!</p>
-                        <p>Столы оптом и в розницу.</p>
-                        <p>Бесплатная доставка.</p>
+                        <p class="textYan">Горячие столы!<br>
+                            Столы оптом и в розницу.<br>
+                            Бесплатная доставка.
+                        </p>
                         <p class="rec">реклама</p>
+                        <a href="/" class="transLink"></a>
                     </div>
+
                     <div class="yanText yanVtv">
-                        <p>Горячие столы!</p>
-                        <p>Столы оптом и в розницу.</p>
-                        <p>Бесплатная доставка.</p>
+                        <p class="textYan">Горячие столы!<br>
+                            Столы оптом и в розницу.<br>
+                            Бесплатная доставка.
+                        </p>
                         <p class="rec">реклама</p>
+                        <a href="/" class="transLink"></a>
                     </div>
+
                     <div class="yanText yanVtv">
-                        <p>Горячие столы!</p>
-                        <p>Столы оптом и в розницу.</p>
-                        <p>Бесплатная доставка.</p>
+                        <p class="textYan">Горячие столы!<br>
+                            Столы оптом и в розницу.<br>
+                            Бесплатная доставка.
+                        </p>
                         <p class="rec">реклама</p>
+                        <a href="/" class="transLink"></a>
                     </div>
+
                     <div class="yanText yanVtv">
-                        <p>Горячие столы!</p>
-                        <p>Столы оптом и в розницу.</p>
-                        <p>Бесплатная доставка.</p>
+                        <p class="textYan">Горячие столы!<br>
+                            Столы оптом и в розницу.<br>
+                            Бесплатная доставка.
+                        </p>
                         <p class="rec">реклама</p>
+                        <a href="/" class="transLink"></a>
                     </div>
+
                     <div class="yanText yanVtv">
-                        <p>Горячие столы!</p>
-                        <p>Столы оптом и в розницу.</p>
-                        <p>Бесплатная доставка.</p>
+                        <p class="textYan">Горячие столы!<br>
+                            Столы оптом и в розницу.<br>
+                            Бесплатная доставка.
+                        </p>
                         <p class="rec">реклама</p>
+                        <a href="/" class="transLink"></a>
                     </div>
                 </div>
             </div>
