--- a/news.html
+++ b/news.html
@@ -31,7 +31,7 @@
 <div class="headS d-flex">
     <div class="container">
         <div class="headContent d-flex align-items-center  justify-content-between">
-            <p class="versionLink">Логотип</p>
+            <a href="index.html" class="versionLink">Логотип</a>
             <div class="travel">
                 <a class="travelLink" href="">
                     <img class="rybbuImg" src="assets/img/mr321_03.png" alt="">
@@ -53,11 +53,11 @@
         </div>
         <nav class="nav col-xl-6 col-lg-6 col-md-8">
             <ul class="menu">
-                <li><a class="link" href="/">Новости</a></li>
+                <li><a class="link" href="news.html">Новости</a></li>
                 <li><a class="link" href="/">Объявления</a></li>
                 <li><a class="link" href="/">Афиша</a></li>
                 <li><a class="link" href="/">Люди</a></li>
-                <li><a class="link" href="/">ВТВ</a></li>
+                <li><a class="link" href="vtvMain.html">ВТВ</a></li>
                 <li><a class="link" href="/">Вакансии</a></li>
                 <li><a class="link" href="/">Гороскоп</a></li>
                 <li><a class="link" href="/">Еще</a></li>
@@ -339,7 +339,7 @@
                         <img src="assets/img/svg/ear.svg" alt="">
                     </div>
                     <div class="hearingContent">
-                        <a class="close" href="/"></a>
+                        <p class="close"></p>
                         <h4 class="yanTitle">Я слышал, что...</h4>
                         <p>Подросткам продают пиво!</p>
                         <p>В магазине "БАСКО" ул.1 Мая 83</p>
@@ -591,7 +591,7 @@
                 <div class="blockParent">
                     <div class="recording lineLeft flex-wrap">
                         <p class="userName">Вадим Исаков</p>
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <p class="advLink">Реклама</p>
@@ -599,7 +599,7 @@
                     </div>
                     <div class="recording lineLeft">
                         <p class="userName">Вадим Исаков</p>
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <p class="advLink">Реклама</p>
@@ -607,7 +607,7 @@
                     </div>
                     <div class="recording lineLeft">
                         <p class="userName">Вадим Исаков</p>
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <a class="transLink" href="/"></a>
@@ -615,7 +615,7 @@
                     </div>
                     <div class="recording lineLeft">
                         <p class="userName">Вадим Исаков</p>
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <p class="advLink">Реклама</p>
@@ -623,7 +623,7 @@
                     </div>
                     <div class="recording lineLeft">
                         <p class="userName">Вадим Исаков</p>
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <a class="transLink" href="/"></a>
@@ -642,7 +642,7 @@
                 </div>
                 <div class="blockParent">
                     <div class="recording lineLeft">
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <div class="newsImgStats">
@@ -657,7 +657,7 @@
                     </div>
                     <div class="recording lineLeft">
 
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <div class="newsImgStats">
@@ -671,7 +671,7 @@
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording lineLeft">
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <div class="newsImgStats">
@@ -685,7 +685,7 @@
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording lineLeft">
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <div class="newsImgStats">
@@ -699,7 +699,7 @@
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording lineLeft">
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <div class="newsImgStats">
