--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="headS d-flex">
     <div class="container">
         <div class="headContent d-flex align-items-center  justify-content-between">
-            <p class="versionLink">Логотип</p>
+            <a href="index.html" class="versionLink">Логотип</a>
             <div class="travel">
                 <a class="travelLink" href="">
                     <img class="rybbuImg" src="assets/img/mr321_03.png" alt="">
@@ -342,12 +342,12 @@
                         <img src="assets/img/svg/ear.svg" alt="">
                     </div>
                     <div class="hearingContent">
-                        <a class="close" href="/"></a>
+                        <p class="close"></p>
                         <h4 class="yanTitle">Я слышал, что...</h4>
-                        <p>Подросткам продают пиво!</p>
-                        <p>В магазине "БАСКО" ул.1 Мая 83</p>
-                        <p>подросткам продают пиво, сегодня</p>
-                        <p>19.11.2016 в 17.45.</p>
+                        <p>Подросткам продают пиво!<br>
+                            В магазине "БАСКО" ул.1 Мая 83<br>
+                            подросткам продают пиво, сегодня<br>
+                            19.11.2016 в 17.45.</p>
                         <a class="recordingAlllink" href="/">Разместить слух</a>
                         <a class="recordingAlllink" href="/">Все слухи</a>
                     </div>
@@ -657,6 +657,20 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="peopleStruct">
+                            <div class="peopleInfo">
+                                <h2 class="title">Наши люди</h2>
+                                <img class="peopleImg" src="assets/img/chell1.png" alt="">
+                                <div class="owlBlock">
+                                    <h6 class="title">Юрий Бычков</h6>
+                                    <p class="peopleText">Депутат ГосСовета Юрий Бычков отвечает
+                                        на вопросы горожан в программе</p>
+                                    <p class="peopleText">«Юрий Бычков отвечает».</p>
+                                    <a class="peopleLink" href="/">узнать больше</a>
+                                    <a class="peopleLink" href="/">узнать о других</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -670,7 +684,7 @@
                 <div class="blockParent">
                     <div class="recording lineLeft flex-wrap">
                         <p class="userName">Вадим Исаков</p>
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <p class="advLink">Реклама</p>
@@ -678,7 +692,7 @@
                     </div>
                     <div class="recording lineLeft">
                         <p class="userName">Вадим Исаков</p>
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <p class="advLink">Реклама</p>
@@ -686,7 +700,7 @@
                     </div>
                     <div class="recording lineLeft">
                         <p class="userName">Вадим Исаков</p>
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <a class="transLink" href="/"></a>
@@ -694,7 +708,7 @@
                     </div>
                     <div class="recording lineLeft">
                         <p class="userName">Вадим Исаков</p>
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <p class="advLink">Реклама</p>
@@ -702,7 +716,7 @@
                     </div>
                     <div class="recording lineLeft">
                         <p class="userName">Вадим Исаков</p>
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <a class="transLink" href="/"></a>
@@ -721,7 +735,7 @@
                 </div>
                 <div class="blockParent">
                     <div class="recording lineLeft">
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <div class="newsImgStats">
@@ -736,7 +750,7 @@
                     </div>
                     <div class="recording lineLeft">
 
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <div class="newsImgStats">
@@ -750,7 +764,7 @@
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording lineLeft">
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <div class="newsImgStats">
@@ -764,7 +778,7 @@
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording lineLeft">
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <div class="newsImgStats">
@@ -778,7 +792,7 @@
                         <a class="transLink" href="/"></a>
                     </div>
                     <div class="recording lineLeft">
-                        <p class="recordingLink advText">США госсекретарь Джон Керри
+                        <p class="recordingLink recordingText">США госсекретарь Джон Керри
                             заявил во вторник, что Йемен
                             Хути группы 's и саудовский...</p>
                         <div class="newsImgStats">
@@ -817,7 +831,7 @@
 
             <div class="yanContent col-xl-9 col-lg-9 col-md-9 col-sm-12 d-flex">
                 <h4 class="yanTitle">Яндекс.Директ</h4>
-                <a class="close" href="/"></a>
+                <p class="close"></p>
 
                 <div class="yanText">
                     <p class="textYan">Горячие столы!<br>
