--- a/vtvVideo.html
+++ b/vtvVideo.html
@@ -31,7 +31,7 @@
 <div class="headS d-flex">
     <div class="container">
         <div class="headContent d-flex align-items-center  justify-content-between">
-            <p class="versionLink">Логотип</p>
+            <a href="index.html" class="versionLink">Логотип</a>
             <div class="travel">
                 <a class="travelLink" href="">
                     <img class="rybbuImg" src="assets/img/mr321_03.png" alt="">
@@ -53,11 +53,11 @@
         </div>
         <nav class="nav col-xl-6 col-lg-6 col-md-8">
             <ul class="menu">
-                <li><a class="link" href="/">Новости</a></li>
+                <li><a class="link" href="news.html">Новости</a></li>
                 <li><a class="link" href="/">Объявления</a></li>
                 <li><a class="link" href="/">Афиша</a></li>
                 <li><a class="link" href="/">Люди</a></li>
-                <li><a class="link" href="/">ВТВ</a></li>
+                <li><a class="link" href="vtvMain.html">ВТВ</a></li>
                 <li><a class="link" href="/">Вакансии</a></li>
                 <li><a class="link" href="/">Гороскоп</a></li>
                 <li><a class="link" href="/">Еще</a></li>
